# tauri-music-player

./: .gitignore  Claude.md  README-build.md  README.md  Tauri-Player2.md  package.json  pnpm-lock.yaml
.github/workflows/: tauri.yaml
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  http.rs  lib.rs  music.rs
src/components/: PlayerControls.css  PlayerControls.jsx  ServerControls.css  ServerControls.jsx  TrackList.css  TrackList.jsx
