[package]
name = "tauri-music-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
id3 = "1.9.0"             # ID3タグ処理
warp = "0.3"              # HTTPサーバー
futures = "0.3"           # 非同期処理
bytes = "1.0"             # バイト処理
tempfile = "3.3"          # 一時ファイル
lazy_static = "1.5.0"
local-ip-address = {version = "0.6.3", git = "https://github.com/LeoBorai/local-ip-address" }
tokio-util = "0.7.14"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
urlencoding = "2.1.3"
